--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,17 @@
 
 <body>
 
+  <div class="row">
+      <div class="col-md-12 align-right">
+        <p>Steven J. Darby</p>
+      </div>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h3>Use the interactive charts below to explore the dataset</h3>
+        <p>Steven J. Darby</p>
       </div>
     </div>
     <div class="row">
@@ -38,12 +44,13 @@
         <div id="gauge"></div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div id="bubble"></div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="bubble"></div>
+      </div>
     </div>
   </div>
+
 
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
